ex 2: clinica, enfermeiro, medico e trabalha

--- a/entrega 2/E2-report.ipynb
+++ b/entrega 2/E2-report.ipynb
@@ -129,10 +129,10 @@
     ");\n",
     "\n",
     "CREATE TABLE trabalha(\n",
-    "nif CHAR(9) NOT NULL REFERENCES medico,\n",
-    "nome VARCHAR(80) NOT NULL REFERENCES clinica,\n",
-    "dia_da_semana SMALLINT,\n",
-    "PRIMARY KEY (nif, dia_da_semana)\n",
+    "\tnif CHAR(9) NOT NULL REFERENCES medico,\n",
+    "\tnome VARCHAR(80) NOT NULL REFERENCES clinica,\n",
+    "\tdia_da_semana SMALLINT,\n",
+    "\tPRIMARY KEY (nif, dia_da_semana)\n",
     ");\n",
     "\n",
     "CREATE TABLE paciente(\n",
