Add database population script and update report

--- a/entrega 2/E2-report.ipynb
+++ b/entrega 2/E2-report.ipynb
@@ -408,6 +408,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4464483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Populate the database\n",
+    "CURRENT_DIR=$(pwd)\n",
+    "SQL_FILE=\"$CURRENT_DIR/work/populate.sql\"\n",
+    "export PGPASSWORD='projeto'\n",
+    "psql -h postgres -U projeto -f \"$SQL_FILE\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37637f46-470f-431a-9833-4d8665176450",
    "metadata": {
