--- a/entrega 2/E2-report.ipynb
+++ b/entrega 2/E2-report.ipynb
@@ -370,8 +370,8 @@
     "CREATE OR REPLACE FUNCTION check_medico_clinica_consulta_func() RETURNS TRIGGER AS\n",
     "$$\n",
     "BEGIN\n",
-    "    IF EXTRACT(DOW FROM DATE(NEW.data)) != (SELECT dia_da_semana FROM trabalha WHERE nif = NEW.nif)\n",
-    "    OR NEW.nome != (SELECT nome FROM trabalha WHERE nif = NEW.nif) THEN\n",
+    "    IF EXTRACT(DOW FROM DATE(NEW.data)) NOT IN (SELECT dia_da_semana FROM trabalha WHERE nif = NEW.nif)\n",
+    "    OR NEW.nome NOT IN (SELECT nome FROM trabalha WHERE nif = NEW.nif) THEN\n",
     "        RAISE EXCEPTION 'Um médico só pode dar consultas na clínica em que trabalha no dia da semana correspondente à data da consulta.';\n",
     "    END IF;\n",
     "    RETURN NEW;\n",
