--- a/entrega 2/E2-report.ipynb
+++ b/entrega 2/E2-report.ipynb
@@ -457,7 +457,7 @@
    "id": "97f45cec-fe42-418a-b85d-c9e51807a42c",
    "metadata": {},
    "source": [
-    "## 3. Vistas\n",
+    "## 4. Vistas\n",
     "\n",
     "Crie uma vista materializada que detalhe as informações mais importantes sobre as consultas dos pacientes, combinando a informação de várias tabelas da base de dados. A vista deve ter o seguinte esquema:\n",
     "\n",
@@ -483,7 +483,52 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "-- CREATE MATERIALIZED VIEW ..."
+    "DROP MATERIALIZED VIEW IF EXISTS historial_paciente;\n",
+    "\n",
+    "CREATE MATERIALIZED VIEW historial_paciente AS\n",
+    "SELECT \n",
+    "    c.id,\n",
+    "    c.ssn,\n",
+    "    c.nif,\n",
+    "    c.nome,\n",
+    "    c.data,\n",
+    "    EXTRACT(YEAR FROM c.data) AS ano, \n",
+    "    EXTRACT(MONTH FROM c.data) AS mes,\n",
+    "    EXTRACT(DAY FROM c.data) AS dia_do_mes,\n",
+    "    EXTRACT(DOW FROM c.data) AS dia_da_semana,\n",
+    "    REGEXP_REPLACE(SUBSTRING(cl.morada FROM '\\d{4}-\\d{3}\\s*(.*)'), '\\s+', ' ') AS localidade,\n",
+    "    m.especialidade AS especialidade,\n",
+    "    'observacao' AS tipo,\n",
+    "    o.parametro AS chave,\n",
+    "    o.valor AS valor\n",
+    "FROM\n",
+    "    consulta c\n",
+    "JOIN clinica cl ON c.nome = cl.nome\n",
+    "JOIN medico m ON c.nif = m.nif\n",
+    "JOIN observacao o ON c.id = o.id\n",
+    "\n",
+    "UNION ALL\n",
+    "\n",
+    "SELECT\n",
+    "    c.id,\n",
+    "    c.ssn,\n",
+    "    c.nif,\n",
+    "    c.nome,\n",
+    "    c.data,\n",
+    "    EXTRACT(YEAR FROM c.data) AS ano,\n",
+    "    EXTRACT(MONTH FROM c.data) AS mes,\n",
+    "    EXTRACT(DAY FROM c.data) AS dia_do_mes,\n",
+    "    EXTRACT(DOW FROM c.data) AS dia_da_semana,\n",
+    "    REGEXP_REPLACE(SUBSTRING(cl.morada FROM '\\d{4}-\\d{3}\\s*(.*)'), '\\s+', ' ') AS localidade,\n",
+    "    m.especialidade AS especialidade,\n",
+    "    'receita' AS tipo,\n",
+    "    r.medicamento AS chave,\n",
+    "    r.quantidade AS valor\n",
+    "FROM\n",
+    "    consulta c\n",
+    "JOIN clinica cl ON c.nome = cl.nome\n",
+    "JOIN medico m ON c.nif = m.nif\n",
+    "JOIN receita r ON c.codigo_sns = r.codigo_sns;"
    ]
   },
   {
