--- a/entrega 2/E2-report.ipynb
+++ b/entrega 2/E2-report.ipynb
@@ -559,7 +559,24 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "-- SELECT ..."
+    "WITH intervalos_temporais AS (\n",
+    "    SELECT\n",
+    "        h.ssn,\n",
+    "        p.nome,\n",
+    "        MAX(h.data) - MIN(h.data) AS intervalo_temporal\n",
+    "    FROM historial_paciente AS h\n",
+    "    JOIN paciente AS p ON h.ssn = p.ssn\n",
+    "    WHERE h.especialidade = 'ortopedia' AND h.tipo = 'observacao' AND h.valor IS NULL\n",
+    "    GROUP BY h.ssn, p.nome, h.chave\n",
+    ")\n",
+    "SELECT\n",
+    "    r.ssn,\n",
+    "    r.nome,\n",
+    "    r.intervalo_temporal\n",
+    "FROM intervalos_temporais AS r\n",
+    "WHERE r.intervalo_temporal = (\n",
+    "    SELECT MAX(intervalo_temporal) FROM intervalos_temporais\n",
+    ");"
    ]
   },
   {
