--- a/entrega 2/E2-report.ipynb
+++ b/entrega 2/E2-report.ipynb
@@ -597,7 +597,12 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "-- SELECT ..."
+    "SELECT\n",
+    "    h.chave\n",
+    "FROM historial_paciente AS h\n",
+    "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
+    "GROUP BY h.chave, h.ssn\n",
+    "HAVING COUNT(DISTINCT h.mes) = 12;"
    ]
   },
   {
