--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -354,8 +354,7 @@
         "    'observacao' AS tipo,\n",
         "    o.parametro AS chave,\n",
         "    o.valor AS valor\n",
-        "FROM\n",
-        "    consulta c\n",
+        "FROM consulta c\n",
         "JOIN clinica cl ON c.nome = cl.nome\n",
         "JOIN medico m ON c.nif = m.nif\n",
         "JOIN observacao o ON c.id = o.id\n",
@@ -376,8 +375,7 @@
         "    'receita' AS tipo,\n",
         "    r.medicamento AS chave,\n",
         "    r.quantidade AS valor\n",
-        "FROM\n",
-        "    consulta c\n",
+        "FROM consulta c\n",
         "JOIN clinica cl ON c.nome = cl.nome\n",
         "JOIN medico m ON c.nif = m.nif\n",
         "JOIN receita r ON c.codigo_sns = r.codigo_sns;"
@@ -421,14 +419,9 @@
         "    WHERE h.especialidade = 'ortopedia' AND h.tipo = 'observacao' AND h.valor IS NULL\n",
         "    GROUP BY h.ssn, p.nome, h.chave\n",
         ")\n",
-        "SELECT\n",
-        "    r.ssn,\n",
-        "    r.nome,\n",
-        "    r.intervalo_temporal\n",
+        "SELECT r.ssn, r.nome, r.intervalo_temporal\n",
         "FROM intervalos_temporais AS r\n",
-        "WHERE r.intervalo_temporal = (\n",
-        "    SELECT MAX(intervalo_temporal) FROM intervalos_temporais\n",
-        ");"
+        "WHERE r.intervalo_temporal = (SELECT MAX(intervalo_temporal) FROM intervalos_temporais);"
       ]
     },
     {
@@ -449,8 +442,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "SELECT\n",
-        "    h.chave\n",
+        "SELECT h.chave\n",
         "FROM historial_paciente AS h\n",
         "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
         "GROUP BY h.chave, h.ssn\n",
@@ -475,7 +467,27 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- SELECT ..."
+        "SELECT \n",
+        "    h.chave AS medicamento,\n",
+        "    h.localidade,\n",
+        "    h.nome AS clinica,\n",
+        "    h.mes,\n",
+        "    h.dia_do_mes,\n",
+        "    h.especialidade,\n",
+        "    m.nome AS nome_do_medico,\n",
+        "    SUM(h.valor) AS quantidade\n",
+        "FROM historial_paciente AS h \n",
+        "JOIN medico AS m ON h.nif = m.nif\n",
+        "WHERE h.tipo = 'receita' AND h.ano = 2023 \n",
+        "GROUP BY ROLLUP(h.chave, h.localidade, h.nome, h.mes, h.dia_do_mes, h.especialidade, m.nome)\n",
+        "ORDER BY \n",
+        "    h.chave,\n",
+        "    h.localidade,\n",
+        "    h.nome,\n",
+        "    h.mes,\n",
+        "    h.dia_do_mes,\n",
+        "    h.especialidade,\n",
+        "    m.nome;"
       ]
     },
     {
