--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -479,7 +479,15 @@
         "FROM historial_paciente AS h \n",
         "JOIN medico AS m ON h.nif = m.nif\n",
         "WHERE h.tipo = 'receita' AND h.ano = 2023 \n",
-        "GROUP BY ROLLUP(h.chave, h.localidade, h.nome, h.mes, h.dia_do_mes, h.especialidade, m.nome)\n",
+        "GROUP BY GROUPING SETS(\n",
+        "    (h.chave), \n",
+        "    (h.chave, h.localidade), \n",
+        "    (h.chave, h.localidade, h.nome), \n",
+        "    (h.chave, h.mes), \n",
+        "    (h.chave, h.mes, h.dia_do_mes), \n",
+        "    (h.chave, h.especialidade), \n",
+        "    (h.chave, h.especialidade, m.nome)\n",
+        ")\n",
         "ORDER BY \n",
         "    h.chave,\n",
         "    h.localidade,\n",
@@ -508,7 +516,10 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- SELECT ..."
+        "SELECT \n",
+        "    h.chave AS parametro,\n",
+        "    COUNT(DISTINCT h.ssn) AS numero_de_pacientes,\n",
+        "    COUNT(h.id) AS numero_de_consultas"
       ]
     },
     {
