--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -518,8 +518,15 @@
         "%%sql\n",
         "SELECT \n",
         "    h.chave AS parametro,\n",
-        "    COUNT(DISTINCT h.ssn) AS numero_de_pacientes,\n",
-        "    COUNT(h.id) AS numero_de_consultas"
+        "    h.especialidade,\n",
+        "    m.nome AS nome_medico,\n",
+        "    h.nome AS clinica,\n",
+        "    AVG(valor) AS valor_medio,\n",
+        "    STDDEV(valor) AS desvio_padrao\n",
+        "FROM historial_paciente AS h\n",
+        "JOIN medico AS m ON h.nif = m.nif\n",
+        "WHERE h.tipo = 'observacao' AND h.valor IS NOT NULL\n",
+        "GROUP BY ROLLUP(h.chave, h.especialidade, m.nome, h.nome);"
       ]
     },
     {
