--- a/entrega 2/development/E2-report.ipynb
+++ b/entrega 2/development/E2-report.ipynb
@@ -232,7 +232,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- (RI-1)\n",
+    "\n",
     "CREATE OR REPLACE FUNCTION check_hora_consulta_func() RETURNS TRIGGER AS\n",
     "$$\n",
     "BEGIN\n",
@@ -300,7 +300,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- (RI-2)\n",
+    "\n",
     "CREATE OR REPLACE FUNCTION check_medico_consulta_func() RETURNS TRIGGER AS\n",
     "$$\n",
     "BEGIN\n",
@@ -366,7 +366,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- (RI-3)\n",
+    "\n",
     "CREATE OR REPLACE FUNCTION check_medico_clinica_consulta_func() RETURNS TRIGGER AS\n",
     "$$\n",
     "BEGIN\n",
@@ -483,6 +483,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
+    "\n",
     "DROP MATERIALIZED VIEW IF EXISTS historial_paciente;\n",
     "\n",
     "CREATE MATERIALIZED VIEW historial_paciente AS\n",
@@ -495,14 +496,12 @@
     "    EXTRACT(YEAR FROM c.data) AS ano, \n",
     "    EXTRACT(MONTH FROM c.data) AS mes,\n",
     "    EXTRACT(DAY FROM c.data) AS dia_do_mes,\n",
-    "    EXTRACT(DOW FROM c.data) AS dia_da_semana,\n",
     "    REGEXP_REPLACE(SUBSTRING(cl.morada FROM '\\d{4}-\\d{3}\\s*(.*)'), '\\s+', ' ') AS localidade,\n",
     "    m.especialidade AS especialidade,\n",
     "    'observacao' AS tipo,\n",
     "    o.parametro AS chave,\n",
     "    o.valor AS valor\n",
-    "FROM\n",
-    "    consulta c\n",
+    "FROM consulta c\n",
     "JOIN clinica cl ON c.nome = cl.nome\n",
     "JOIN medico m ON c.nif = m.nif\n",
     "JOIN observacao o ON c.id = o.id\n",
@@ -518,14 +517,12 @@
     "    EXTRACT(YEAR FROM c.data) AS ano,\n",
     "    EXTRACT(MONTH FROM c.data) AS mes,\n",
     "    EXTRACT(DAY FROM c.data) AS dia_do_mes,\n",
-    "    EXTRACT(DOW FROM c.data) AS dia_da_semana,\n",
     "    REGEXP_REPLACE(SUBSTRING(cl.morada FROM '\\d{4}-\\d{3}\\s*(.*)'), '\\s+', ' ') AS localidade,\n",
     "    m.especialidade AS especialidade,\n",
     "    'receita' AS tipo,\n",
     "    r.medicamento AS chave,\n",
     "    r.quantidade AS valor\n",
-    "FROM\n",
-    "    consulta c\n",
+    "FROM consulta c\n",
     "JOIN clinica cl ON c.nome = cl.nome\n",
     "JOIN medico m ON c.nif = m.nif\n",
     "JOIN receita r ON c.codigo_sns = r.codigo_sns;"
@@ -559,6 +556,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
+    "\n",
     "WITH intervalos_temporais AS (\n",
     "    SELECT\n",
     "        h.ssn,\n",
@@ -569,14 +567,9 @@
     "    WHERE h.especialidade = 'ortopedia' AND h.tipo = 'observacao' AND h.valor IS NULL\n",
     "    GROUP BY h.ssn, p.nome, h.chave\n",
     ")\n",
-    "SELECT\n",
-    "    r.ssn,\n",
-    "    r.nome,\n",
-    "    r.intervalo_temporal\n",
+    "SELECT r.ssn, r.nome, r.intervalo_temporal\n",
     "FROM intervalos_temporais AS r\n",
-    "WHERE r.intervalo_temporal = (\n",
-    "    SELECT MAX(intervalo_temporal) FROM intervalos_temporais\n",
-    ");"
+    "WHERE r.intervalo_temporal = (SELECT MAX(intervalo_temporal) FROM intervalos_temporais);"
    ]
   },
   {
@@ -597,8 +590,8 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT\n",
-    "    h.chave\n",
+    "\n",
+    "SELECT h.chave\n",
     "FROM historial_paciente AS h\n",
     "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
     "GROUP BY h.chave, h.ssn\n",
@@ -623,7 +616,36 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "-- SELECT ..."
+    "\n",
+    "SELECT \n",
+    "    h.chave AS medicamento,\n",
+    "    h.localidade,\n",
+    "    h.nome AS clinica,\n",
+    "    h.mes,\n",
+    "    h.dia_do_mes,\n",
+    "    h.especialidade,\n",
+    "    m.nome AS nome_do_medico,\n",
+    "    SUM(h.valor) AS quantidade\n",
+    "FROM historial_paciente AS h \n",
+    "JOIN medico AS m ON h.nif = m.nif\n",
+    "WHERE h.tipo = 'receita' AND h.ano = 2023 \n",
+    "GROUP BY GROUPING SETS(\n",
+    "    (h.chave), \n",
+    "    (h.chave, h.localidade), \n",
+    "    (h.chave, h.localidade, h.nome), \n",
+    "    (h.chave, h.mes), \n",
+    "    (h.chave, h.mes, h.dia_do_mes), \n",
+    "    (h.chave, h.especialidade), \n",
+    "    (h.chave, h.especialidade, m.nome)\n",
+    ")\n",
+    "ORDER BY \n",
+    "    h.chave,\n",
+    "    h.localidade,\n",
+    "    h.nome,\n",
+    "    h.mes,\n",
+    "    h.dia_do_mes,\n",
+    "    h.especialidade,\n",
+    "    m.nome;"
    ]
   },
   {
@@ -644,7 +666,18 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "-- SELECT ..."
+    "\n",
+    "SELECT \n",
+    "    h.chave AS parametro,\n",
+    "    h.especialidade,\n",
+    "    m.nome AS nome_medico,\n",
+    "    h.nome AS clinica,\n",
+    "    AVG(valor) AS valor_medio,\n",
+    "    STDDEV(valor) AS desvio_padrao\n",
+    "FROM historial_paciente AS h\n",
+    "JOIN medico AS m ON h.nif = m.nif\n",
+    "WHERE h.tipo = 'observacao' AND h.valor IS NOT NULL\n",
+    "GROUP BY ROLLUP(h.chave, h.especialidade, m.nome, h.nome);"
    ]
   },
   {
@@ -673,6 +706,7 @@
    "metadata": {},
    "source": [
     "### 6.1\n",
+    "```sql\n",
     "SELECT nome \n",
     "FROM paciente \n",
     "JOIN consulta USING (ssn) \n",
@@ -691,7 +725,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "-- CREATE INDEX ..."
+    "\n",
+    "DROP INDEX IF EXISTS obs_param_vlr_idx;\n",
+    "\n",
+    "CREATE INDEX obs_param_vlr_idx ON observacao(parametro, valor);"
    ]
   },
   {
@@ -701,7 +738,7 @@
    "source": [
     "### Justificação\n",
     "\n",
-    "..."
+    "Para otimizar a query acima, optámos por um índice composto do tipo B-tree sobre a tabela *observacao*, com as colunas *parametro* e *valor*. A ordem das colunas é relevante e escolhemos a coluna *parametro* como primeira coluna do índice por ser a coluna que é filtrada segundo uma igualdade. A criação deste índice evita fazer um Seq Scan na tabela *observacao* e permite fazer um Bitmap Index Scan utilizando o índice composto, que é mais eficiente. Entendemos no entanto que a criação de um índice individual sobre uma das colunas filtradas também seria uma opção válida e ao optarmos por um índice composto temos um trade-off entre a eficiência da query acima e a eficiência na inserção/atualização/deleção de registos na tabela *observacao*. Ponderámos também criar um índice sobre a coluna *ssn* da tabela *consulta* de forma a tornar mais eficiente o JOIN da tabela *paciente* com a tabela *consulta* mas ao testarmos o índice com EXPLAIN ANALYSE concluímos que a criação desse índice não mudava o plano de execução da query, logo a sua criação não seria justificada."
    ]
   },
   {
@@ -710,6 +747,7 @@
    "metadata": {},
    "source": [
     "### 6.2\n",
+    "```sql\n",
     "SELECT especialidade, SUM(quantidade) AS qtd\n",
     "FROM medico \n",
     "JOIN consulta USING (nif)\n",
@@ -729,6 +767,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
+    "\n",
     "-- CREATE INDEX ..."
    ]
   },
