--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -162,7 +162,6 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- (RI-1)\n",
         "\n",
         "CREATE OR REPLACE FUNCTION check_hora_consulta_func(hora TIME)\n",
         "    RETURNS BOOLEAN AS\n",
@@ -198,7 +197,6 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- (RI-2)\n",
         "\n",
         "CREATE OR REPLACE FUNCTION check_medico_consulta_func()\n",
         "    RETURNS TRIGGER AS\n",
@@ -235,7 +233,6 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- (RI-3)\n",
         "\n",
         "CREATE OR REPLACE FUNCTION check_medico_clinica_consulta_func() RETURNS TRIGGER AS\n",
         "$$\n",
@@ -337,6 +334,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
+        "\n",
         "DROP MATERIALIZED VIEW IF EXISTS historial_paciente;\n",
         "\n",
         "CREATE MATERIALIZED VIEW historial_paciente AS\n",
@@ -411,6 +409,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
+        "\n",
         "WITH intervalos_temporais AS (\n",
         "    SELECT\n",
         "        h.ssn,\n",
@@ -421,14 +420,9 @@
         "    WHERE h.especialidade = 'ortopedia' AND h.tipo = 'observacao' AND h.valor IS NULL\n",
         "    GROUP BY h.ssn, p.nome, h.chave\n",
         ")\n",
-        "SELECT\n",
-        "    r.ssn,\n",
-        "    r.nome,\n",
-        "    r.intervalo_temporal\n",
+        "SELECT r.ssn, r.nome, r.intervalo_temporal\n",
         "FROM intervalos_temporais AS r\n",
-        "WHERE r.intervalo_temporal = (\n",
-        "    SELECT MAX(intervalo_temporal) FROM intervalos_temporais\n",
-        ");"
+        "WHERE r.intervalo_temporal = (SELECT MAX(intervalo_temporal) FROM intervalos_temporais);"
       ]
     },
     {
@@ -449,8 +443,8 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "SELECT\n",
-        "    h.chave\n",
+        "\n",
+        "SELECT h.chave\n",
         "FROM historial_paciente AS h\n",
         "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
         "GROUP BY h.chave, h.ssn\n",
@@ -475,7 +469,36 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- SELECT ..."
+        "\n",
+        "SELECT \n",
+        "    h.chave AS medicamento,\n",
+        "    h.localidade,\n",
+        "    h.nome AS clinica,\n",
+        "    h.mes,\n",
+        "    h.dia_do_mes,\n",
+        "    h.especialidade,\n",
+        "    m.nome AS nome_do_medico,\n",
+        "    SUM(h.valor) AS quantidade\n",
+        "FROM historial_paciente AS h \n",
+        "JOIN medico AS m ON h.nif = m.nif\n",
+        "WHERE h.tipo = 'receita' AND h.ano = 2023 \n",
+        "GROUP BY GROUPING SETS(\n",
+        "    (h.chave), \n",
+        "    (h.chave, h.localidade), \n",
+        "    (h.chave, h.localidade, h.nome), \n",
+        "    (h.chave, h.mes), \n",
+        "    (h.chave, h.mes, h.dia_do_mes), \n",
+        "    (h.chave, h.especialidade), \n",
+        "    (h.chave, h.especialidade, m.nome)\n",
+        ")\n",
+        "ORDER BY \n",
+        "    h.chave,\n",
+        "    h.localidade,\n",
+        "    h.nome,\n",
+        "    h.mes,\n",
+        "    h.dia_do_mes,\n",
+        "    h.especialidade,\n",
+        "    m.nome;"
       ]
     },
     {
@@ -496,7 +519,18 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- SELECT ..."
+        "\n",
+        "SELECT \n",
+        "    h.chave AS parametro,\n",
+        "    h.especialidade,\n",
+        "    m.nome AS nome_medico,\n",
+        "    h.nome AS clinica,\n",
+        "    AVG(valor) AS valor_medio,\n",
+        "    STDDEV(valor) AS desvio_padrao\n",
+        "FROM historial_paciente AS h\n",
+        "JOIN medico AS m ON h.nif = m.nif\n",
+        "WHERE h.tipo = 'observacao' AND h.valor IS NOT NULL\n",
+        "GROUP BY ROLLUP(h.chave, h.especialidade, m.nome, h.nome);"
       ]
     },
     {
@@ -545,7 +579,10 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-        "-- CREATE INDEX ..."
+        "\n",
+        "DROP INDEX IF EXISTS obs_param_vlr_idx;\n",
+        "\n",
+        "CREATE INDEX obs_param_vlr_idx ON observacao(parametro, valor);"
       ]
     },
     {
@@ -555,7 +592,7 @@
       "source": [
         "### Justificação\n",
         "\n",
-        "..."
+        "Para otimizar a query acima, optámos por um índice composto do tipo B-tree sobre a tabela *observacao*, com as colunas *parametro* e *valor*. A ordem das colunas é relevante e escolhemos a coluna *parametro* como primeira coluna do índice por ser a coluna que é filtrada segundo uma igualdade. A criação deste índice evita fazer um Seq Scan na tabela *observacao* e permite fazer um Bitmap Index Scan utilizando o índice composto, que é mais eficiente. Entendemos no entanto que a criação de um índice individual sobre uma das colunas filtradas também seria uma opção válida e ao optarmos por um índice composto temos um trade-off entre a eficiência da query acima e a eficiência na inserção/atualização/deleção de registos na tabela *observacao*. Ponderámos também criar um índice sobre a coluna *ssn* da tabela *consulta* de forma a tornar mais eficiente o JOIN da tabela *paciente* com a tabela *consulta* mas ao testarmos o índice com EXPLAIN ANALYSE concluímos que a criação desse índice não mudava o plano de execução da query, logo a sua criação não seria justificada."
       ]
     },
     {
@@ -585,6 +622,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
+        "\n",
         "-- CREATE INDEX ..."
       ]
     },
