--- a/entrega 2/development/E2-report.ipynb
+++ b/entrega 2/development/E2-report.ipynb
@@ -567,9 +567,9 @@
     "    WHERE h.especialidade = 'ortopedia' AND h.tipo = 'observacao' AND h.valor IS NULL\n",
     "    GROUP BY h.ssn, p.nome, h.chave\n",
     ")\n",
-    "SELECT r.ssn, r.nome, r.intervalo_temporal\n",
-    "FROM intervalos_temporais AS r\n",
-    "WHERE r.intervalo_temporal = (SELECT MAX(intervalo_temporal) FROM intervalos_temporais);"
+    "SELECT it.ssn, it.nome, it.intervalo_temporal\n",
+    "FROM intervalos_temporais AS it\n",
+    "WHERE it.intervalo_temporal = (SELECT MAX(intervalo_temporal) FROM intervalos_temporais);"
    ]
   },
   {
@@ -591,7 +591,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT h.chave\n",
+    "SELECT h.chave AS medicamento\n",
     "FROM historial_paciente AS h\n",
     "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
     "GROUP BY h.chave, h.ssn\n",
