--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -441,10 +441,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-<<<<<<< HEAD
         "\n",
-=======
->>>>>>> 5dfbb501b4c1213a57e1992a8feb5c48b42d002d
         "SELECT h.chave\n",
         "FROM historial_paciente AS h\n",
         "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
@@ -470,10 +467,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-<<<<<<< HEAD
         "\n",
-=======
->>>>>>> 5dfbb501b4c1213a57e1992a8feb5c48b42d002d
         "SELECT \n",
         "    h.chave AS medicamento,\n",
         "    h.localidade,\n",
@@ -523,10 +517,7 @@
       "outputs": [],
       "source": [
         "%%sql\n",
-<<<<<<< HEAD
         "\n",
-=======
->>>>>>> 5dfbb501b4c1213a57e1992a8feb5c48b42d002d
         "SELECT \n",
         "    h.chave AS parametro,\n",
         "    h.especialidade,\n",
@@ -567,11 +558,11 @@
       "source": [
         "### 6.1\n",
         "```sql\n",
-        "SELECT nome \n",
+        "SELECT paciente.nome \n",
         "FROM paciente \n",
         "JOIN consulta USING (ssn) \n",
         "JOIN observacao USING (id) \n",
-        "WHERE parametro = ‘pressão diastólica’ \n",
+        "WHERE parametro = 'pressão diastólica' \n",
         "AND valor >= 9;\n",
         "```"
       ]
@@ -587,9 +578,11 @@
       "source": [
         "%%sql\n",
         "\n",
-        "DROP INDEX IF EXISTS obs_param_vlr_idx;\n",
+        "DROP INDEX IF EXISTS observacao_parametro_valor_idx;\n",
+        "DROP INDEX IF EXISTS consulta_ssn_idx;\n",
         "\n",
-        "CREATE INDEX obs_param_vlr_idx ON observacao(parametro, valor);"
+        "CREATE INDEX observacao_parametro_valor_idx ON observacao(parametro, valor);\n",
+        "CREATE INDEX consulta_ssn_idx ON consulta USING HASH (ssn);"
       ]
     },
     {
@@ -599,7 +592,9 @@
       "source": [
         "### Justificação\n",
         "\n",
-        "Para otimizar a query acima, optámos por um índice composto do tipo B-tree sobre a tabela *observacao*, com as colunas *parametro* e *valor*. A ordem das colunas é relevante e escolhemos a coluna *parametro* como primeira coluna do índice por ser a coluna que é filtrada segundo uma igualdade. A criação deste índice evita fazer um Seq Scan na tabela *observacao* e permite fazer um Bitmap Index Scan utilizando o índice composto, que é mais eficiente. Entendemos no entanto que a criação de um índice individual sobre uma das colunas filtradas também seria uma opção válida e ao optarmos por um índice composto temos um trade-off entre a eficiência da query acima e a eficiência na inserção/atualização/deleção de registos na tabela *observacao*. Ponderámos também criar um índice sobre a coluna *ssn* da tabela *consulta* de forma a tornar mais eficiente o JOIN da tabela *paciente* com a tabela *consulta* mas ao testarmos o índice com EXPLAIN ANALYSE concluímos que a criação desse índice não mudava o plano de execução da query, logo a sua criação não seria justificada."
+        "Para otimizar a query acima, primeiro optámos por um índice composto do tipo B-tree sobre a tabela *observacao*, com as colunas *parametro* e *valor*. A ordem das colunas é relevante e escolhemos a coluna *parametro* como primeira coluna do índice por ser a coluna que é filtrada segundo uma igualdade. A criação deste índice evita fazer um Seq Scan na tabela *observacao* e permite fazer um Bitmap Index Scan utilizando o índice composto criado, que acaba por ser mais eficiente. Entendemos no entanto que a criação de um índice individual sobre uma das colunas filtradas também seria uma opção válida e ao optarmos por um índice composto temos um trade-off entre a eficiência da query acima e a eficiência na inserção/atualização/deleção de registos na tabela *observacao*.\n",
+        "Finalmente, criámos um índice do tipo Hash sobre a coluna *ssn* da tabela *consulta* de forma a otimizar o JOIN da tabela *paciente* com a tabela *consulta*.\n",
+        "Não criámos um índice sobre a coluna *id* da tabela *observacao* porque esta tabela tem colunas que são filtradas na query e por isso não se justificava a criação de um índice com vista a otimizar um JOIN."
       ]
     },
     {
@@ -612,7 +607,7 @@
         "SELECT especialidade, SUM(quantidade) AS qtd\n",
         "FROM medico \n",
         "JOIN consulta USING (nif)\n",
-        "JOIN receita USING (codigo_ssn) \n",
+        "JOIN receita USING (codigo_sns) \n",
         "WHERE data BETWEEN '2023-01-01' AND '2023-12-31' \n",
         "GROUP BY especialidade\n",
         "ORDER BY qtd;\n",
@@ -630,7 +625,13 @@
       "source": [
         "%%sql\n",
         "\n",
-        "-- CREATE INDEX ..."
+        "DROP INDEX IF EXISTS consulta_data_idx;\n",
+        "DROP INDEX IF EXISTS medico_especialidade_idx;\n",
+        "DROP INDEX IF EXISTS receita_codigo_sns_idx;\n",
+        "\n",
+        "CREATE INDEX consulta_data_idx ON consulta(data);\n",
+        "CREATE INDEX medico_especialidade_idx ON medico USING hash (especialidade);\n",
+        "CREATE INDEX receita_codigo_sns_idx ON receita USING hash (codigo_sns);"
       ]
     },
     {
@@ -640,7 +641,11 @@
       "source": [
         "### Justificação\n",
         "\n",
-        "..."
+        "Para otimizar a query acima, primeiro optámos por um índice do tipo B-tree sobre a coluna *data* da tabela *consulta* de forma a otimizar o processo de filtragem. A criação deste índice evita fazer um Seq Scan na tabela *consulta* e permite fazer um Index Scan utilizando o índice criado, que acaba por ser mais eficiente. \n",
+        "Depois optámos por um índice do tipo Hash sobre a coluna *especialidade* da tabela *medico* de forma a tornar mais eficiente a agregação.\n",
+        "Finalmente, também criámos um índice do tipo Hash sobre a coluna *codigo_sns* da tabela *receita* de forma a otimizar o JOIN da tabela *consulta* com a tabela *receita*.\n",
+        "Não criámos um índice sobre a coluna *nif* da tabela *consulta* porque esta tabela possui a coluna que é filtradas na query e por isso não se justificava a criação de um índice com vista a otimizar um JOIN.\n",
+        "Também decidimos não criar um índice sobre a coluna *quantidade* da tabela *receita* apesar de o ORDER BY ser realizado sobre *qtd* já que *qtd* não é diretamente um valor de uma coluna da tabela mas um valor calculado a partir de uma agregação, daí não se justificar a criação do índice."
       ]
     }
   ],
