--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -424,6 +424,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0c1cf805",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%sql\n",
+        "\n",
+        "WITH ssn_intervalo AS (\n",
+        "        SELECT ssn, MAX(data) - MIN(data) AS intervalo\n",
+        "        FROM historial_paciente\n",
+        "        WHERE especialidade = 'ortopedia' AND tipo = 'observacao' AND valor IS NULL\n",
+        "        GROUP BY ssn, chave\n",
+        "    )\n",
+        "SELECT nome, ssn, intervalo\n",
+        "FROM paciente\n",
+        "JOIN ssn_intervalo USING (ssn)\n",
+        "WHERE intervalo = (SELECT MAX(intervalo) FROM ssn_intervalo);"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "a6f88296-429c-4c1c-9a7a-5cbe9cb65920",
       "metadata": {},
@@ -442,11 +463,11 @@
       "source": [
         "%%sql\n",
         "\n",
-        "SELECT h.chave\n",
-        "FROM historial_paciente AS h\n",
-        "WHERE h.especialidade = 'cardiologia' AND h.tipo = 'receita' AND CURRENT_DATE - INTERVAL '12 months' <= h.data AND h.data <= CURRENT_DATE\n",
-        "GROUP BY h.chave, h.ssn\n",
-        "HAVING COUNT(DISTINCT h.mes) = 12;"
+        "SELECT chave\n",
+        "FROM historial_paciente\n",
+        "WHERE especialidade = 'cardiologia' AND tipo = 'receita' AND data BETWEEN CURRENT_DATE - INTERVAL '12 months' AND CURRENT_DATE\n",
+        "GROUP BY chave, ssn\n",
+        "HAVING COUNT(DISTINCT mes) = 12;"
       ]
     },
     {
@@ -477,26 +498,26 @@
         "    h.especialidade,\n",
         "    m.nome AS nome_do_medico,\n",
         "    SUM(h.valor) AS quantidade\n",
-        "FROM historial_paciente AS h \n",
-        "JOIN medico AS m ON h.nif = m.nif\n",
+        "FROM historial_paciente h \n",
+        "JOIN medico m USING (nif)\n",
         "WHERE h.tipo = 'receita' AND h.ano = 2023 \n",
         "GROUP BY GROUPING SETS(\n",
-        "    (h.chave), \n",
-        "    (h.chave, h.localidade), \n",
-        "    (h.chave, h.localidade, h.nome), \n",
-        "    (h.chave, h.mes), \n",
-        "    (h.chave, h.mes, h.dia_do_mes), \n",
-        "    (h.chave, h.especialidade), \n",
-        "    (h.chave, h.especialidade, m.nome)\n",
+        "    (medicamento), \n",
+        "    (medicamento, h.localidade), \n",
+        "    (medicamento, h.localidade, clinica), \n",
+        "    (medicamento, h.mes), \n",
+        "    (medicamento, h.mes, h.dia_do_mes), \n",
+        "    (medicamento, h.especialidade), \n",
+        "    (medicamento, h.especialidade, nome_do_medico)\n",
         ")\n",
         "ORDER BY \n",
-        "    h.chave,\n",
+        "    medicamento,\n",
         "    h.localidade,\n",
-        "    h.nome,\n",
+        "    clinica,\n",
         "    h.mes,\n",
         "    h.dia_do_mes,\n",
         "    h.especialidade,\n",
-        "    m.nome;"
+        "    nome_do_medico;"
       ]
     },
     {
@@ -525,10 +546,15 @@
         "    h.nome AS clinica,\n",
         "    AVG(valor) AS valor_medio,\n",
         "    STDDEV(valor) AS desvio_padrao\n",
-        "FROM historial_paciente AS h\n",
-        "JOIN medico AS m ON h.nif = m.nif\n",
+        "FROM historial_paciente h\n",
+        "JOIN medico m USING (nif)\n",
         "WHERE h.tipo = 'observacao' AND h.valor IS NOT NULL\n",
-        "GROUP BY ROLLUP(h.chave, h.especialidade, m.nome, h.nome);"
+        "GROUP BY ROLLUP(parametro, h.especialidade, nome_medico, clinica)\n",
+        "ORDER BY\n",
+        "    parametro,\n",
+        "    h.especialidade,\n",
+        "    nome_medico NULLS FIRST,\n",
+        "    clinica NULLS FIRST;"
       ]
     },
     {
