--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -463,7 +463,7 @@
       "source": [
         "%%sql\n",
         "\n",
-        "SELECT chave\n",
+        "SELECT chave AS medicamento\n",
         "FROM historial_paciente\n",
         "WHERE especialidade = 'cardiologia' AND tipo = 'receita' AND data BETWEEN CURRENT_DATE - INTERVAL '12 months' AND CURRENT_DATE\n",
         "GROUP BY chave, ssn\n",
